--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       /* write styles here or change to a link to the style sheet if comples */
     </style>
 
-    <title>Put page title here</title>
+    <title>NosillaCast World Clock</title>
   </head>
 
   <body>
