timeString gets the right values but only after both toggles are flipped

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                   <div class="row form-check-inline bg-light border border-dark rounded p-2 m3">
                     <div class="mr-2 align-baseline font-weight-bold mySwitches">24-Hour Clock</div>
                     <div class="custom-control custom-switch form-control-lg">
-                        <input type="checkbox" class="custom-control-input" id="numHrs" name="numHrs" >
+                        <input type="checkbox" class="custom-control-input" checked id="numHrs" name="numHrs" >
                       <label class="custom-control-label mySwitches" for="numHrs">12 Hour Clock</label>
                     
                     </div>
