Switch boxes are the same size
Added class .form-control to the row for each (should have had it in there as per the docs)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h1>The NosillaCastaways World Clock</h1>
           </div>
         </div>
-      </div>
+      </div> <!-- close container for page header -->
     </header>
 
     <!-- The main page body -->
@@ -80,7 +80,7 @@
                   
                 <!-- Switch to show/hide seconds -->
                 <div class="pl-3 pb-3">
-                  <div class="row form-check-inline bg-light border border-dark rounded p-2 m3">
+                  <div class="row form-control form-check-inline bg-light border border-dark rounded p-2 m3"><!-- row for showSeconds switch -->
                     <div class="mr-2 font-weight-bold align-baseline mySwitches d-none d-md-inline">Hide Seconds</div>
                     <div class="mr-2 font-weight-bold align-baseline mySwitches d-inline d-md-none">Hide</div>
                     <div class="custom-control custom-switch form-control-md">
@@ -93,7 +93,7 @@
 
                 <!-- Switch to  12 vs 24 hr clock -->
                 <div class="pl-3">
-                  <div class="row form-check-inline bg-light border border-dark rounded p-2 m3">
+                  <div class="row form-control form-check-inline bg-light border border-dark rounded p-2 m3"> <!-- row for numHrs switch -->
                     <div class="mr-2 font-weight-bold mySwitches d-none d-md-inline">24 Hour Clock</div>
                     <div class="mr-2 font-weight-bold mySwitches d-inline d-md-none">24 Hour</div>
                     <div class="custom-control custom-switch form-control-md">
