--- a/index.html
+++ b/index.html
@@ -83,21 +83,25 @@
       <!-- container to hold switches -->
       <div class="container"> 
         <!-- Switch to show/hide seconds -->
-        <div class="row pl-3 pb-3">
-          <div class="col col-md-6 form-control form-check-inline bg-light border border-dark rounded p-2 m3"><!-- row for showSeconds switch -->
-            <div class="mr-2 font-weight-bold align-baseline mySwitches d-none d-md-inline">Hide Seconds</div>
-            <div class="mr-2 font-weight-bold align-baseline mySwitches d-inline d-md-none">Hide</div>
-            <div class="custom-control custom-switch form-control-md">
+        <div class="row pl-3 pb-3"><!-- row for showSeconds switch -->
+          <div class="col col-md-6 form-control form-check-inline bg-light border border-dark rounded p-2 m3">
+            <!-- Description of checkbox for screen readers -->
+          <div id="secondsDesc" class="sr-only">Switch to toggle between hide and show seconds</div>
+              <div class="mr-2 font-weight-bold align-baseline mySwitches d-none d-md-inline">Hide Seconds</div>
+              <div class="mr-2 font-weight-bold align-baseline mySwitches d-inline d-md-none">Hide</div>
+              <div class="custom-control custom-switch form-control-md" aria-describedby="secondsDesc">
                 <input type="checkbox" class="custom-control-input" id="showSeconds" name="showSeconds" checked>
-              <label class="custom-control-label mySwitches mySwitches" for="showSeconds">Show Seconds</label>
-            </div>
+                <label class="custom-control-label mySwitches" for="showSeconds">Show Seconds</label>
+              </div>
           </div>
         </div>
         <!-- end switch to show/hide seconds -->
 
         <!-- Switch to  12 vs 24 hr clock -->
-        <div class="row pl-3 pb-3">
-          <div class="col col-md-6 form-control form-check-inline bg-light border border-dark rounded p-2 m3"> <!-- row for numHrs switch -->
+        <div class="row pl-3 pb-3"> <!-- row for numHrs switch -->
+          <div class="col col-md-6 form-control form-check-inline bg-light border border-dark rounded p-2 m3">
+            <!-- Description of checkbox for screen readers -->
+            <div id="hrsDesc" class="sr-only">Switch to toggle between 24 and 12 hour clock</div> 
             <div class="mr-2 font-weight-bold mySwitches d-none d-md-inline">24 Hour Clock</div>
             <div class="mr-2 font-weight-bold mySwitches d-inline d-md-none">24 Hour</div>
             <div class="custom-control custom-switch form-control-md">
@@ -116,7 +120,7 @@
           <div class="col col-md-6">
             <div class="card bg-primary text-white" style="width: 100%">
               <div class="card-body">
-                <h5 class="card-title bg-light rounded text-primary col p-2">Your local time is ...</h5>
+                <h5 class="card-title bg-light rounded text-primary col p-2">Your local time:</h5>
                 <p class="card-text"></p>
                 <div class="h1" id="forTime"></div> <!-- placeholder div for clock -->
               </div>
@@ -131,7 +135,7 @@
           <div class="col col-md-6">
             <div class="card bg-primary text-white" style="width: 100%">
               <div class="card-body">
-                <h5 class="card-title bg-light rounded text-primary col p-2">The time in <select class="mr-2 ml-2 col-5 col-md-8 text-primary" id="timeZone" name ="locality"></select> is ...</h5>
+                <h5 class="card-title bg-light rounded text-primary col p-2 pb-1">The time in:<p><select class="mr-2 ml-2 col-5 col-md-11 text-primary" id="timeZone" name ="locality"></select></p></h5>
                 
                 <p class="card-text"></p>
                 <div class="h1" id="forTime2"></div> <!-- placeholder div for clock -->
