Removed changes trying to pulse colons

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         color: #007bff;  /* same color as Bootstrap "primary" */
         vertical-align: text-top;
       }
+      .seperator {
+        color:chartreuse;
+        font-size: 5rem;
+      }
     </style>
   
     <title>NosillaCast World Clock</title>
