Fixed ordering to get clock instance to render
And fixed jQuery to not look for literal string in timeID

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <div class="card bg-primary text-white" style="width: 100%">
           <div class="card-body">
             <h5 class="card-title bg-light rounded text-primary col p-2">{{timeDescription}}</h5>
-          <p class="card-text"></p>
+          <!-- <p class="card-text"></p> -->
           <div class="h1" id="{{timeID}}"></div> <!-- placeholder div for clock -->
           </div>
         </div>
