--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
        <!-- NEW STUFF PROBABLY WRONG -->
       <!-- One placeholder for all clocks using clockCards template -->
-      <div class="container">
+      <div class="container mb-5">
           <div class="row" id="clocksPlaceholder"></div>
       </div>
       <!-- end clocks -->
@@ -218,9 +218,8 @@
           </div>
         </div>
       </div> <!-- end 2nd time card -->
-
     </main>
-    <!-- NEW STUFF PROBABLY WRONG -->
+    
     <!-- The clock card template -->
     <script type="text/html" id="clockCards">
       <div class= "col col-md-6">
