got an empty select to show up on one card only

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               <div class="card bg-primary text-white" style="width: 100%">
                 <div class="card-body">
                   <label class="h5 card-title bg-light rounded text-primary col p-2 pb-1" for="timeZone" sr-only="true">The time in:</label>
-                  <p><select class="mr-2 ml-2 col-5 col-md-11 text-primary" id="timeZone" name ="locality"></select></p></h5>
+                  <p><select class="mr-2 ml-2 col-5 col-md-11 text-primary" id="timeZone" name ="locality"></select></p>
                   <div class="h1" id="forTime2"></div> <!-- placeholder div for clock -->
                 </div>
               </div>
@@ -205,7 +205,7 @@
       </div><!-- end container to border switches and clock -->
     </main>
     
-    <!-- The clock card template -->
+    <!-- The clock card template for CLASS clocks -->
     <script type="text/html" id="clockCards">
       <div class= "col-6 col-md m-2">
         <div class="card bg-primary text-white" style="width: 100%">
