Select created with jQuery has id and class

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
         <div class="card bg-primary text-white" style="width: 100%">
           <div class="card-body">
             <h5 class="card-title bg-light rounded text-primary col p-2">{{timeDescription}}</h5>
-          <!-- <p class="card-text"></p> -->
-          <div class="h1" id="{{timeID}}"></div> <!-- placeholder div for clock -->
+            <div id="{{dropDownID}}"></div> <!-- placeholder for dropdown -->
+          <div class="h3" id="{{timeID}}"></div> <!-- placeholder div for clock -->
           </div>
         </div>
       </div>
