--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
     </nav>
 
     <!-- The page heading -->
-    <!-- The page heading -->
     <header>
       <div class="container-fluid bg bg-light mb-2 rounded">
         <div class="col-8">
@@ -128,15 +127,10 @@
             <form>
               <div class="form-group">
                 <div class="">
-                  <label for="changeHrs">Shift Time</label>
+                  <label for="changeHrs">Shift Time (hrs)</label>
                   <input type="range" class="slider form-control-input" min="0" max="23.5" step=".5" value="0" data-show-value="true" id="changeHrs" data-thumbwidth="20">
                   <p class="slider_label" id="hrsChosen"></p>
                 </div>
-                <!-- <div class="mb-2">
-                  <label for="changeMin">Time Shift Min (by 15 min increments)</label>
-                  <input type="range" class="slider form-control-input" min="0" max="45" step="15" value="0" id="changeMin" data-thumbwidth="20">
-                  <p class="slider_label" id="hrsChosen"></p>
-                </div> -->
               </div>
             </form>
           </div>
@@ -211,7 +205,7 @@
         <div class="card bg-primary text-white" style="width: 100%">
           <div class="card-body">
             <h5 class="card-title bg-light rounded text-primary col p-2">{{timeDescription}}</h5>
-            <div id="{{dropDownID}}"></div> <!-- placeholder for dropdown -->
+            <div id="{{dropDownDivID}}"></div> <!-- placeholder for dropdown select -->
           <div class="h3" id="{{timeID}}"></div> <!-- placeholder div for clock -->
           </div>
         </div>
