--- a/index.html
+++ b/index.html
@@ -120,34 +120,40 @@
     <main>
       <!-- html goes here -->
 
-      <!-- container to hold range sliders -->
-      <div class="container">
-        <div class="row">
-          <div class="col-6">
-            <form>
-              <div class="form-group">
-                <div class="">
-                  <label for="changeHrs">Shift Time (hrs)</label>
-                  <input type="range" class="slider form-control-input" min="0" max="23.5" step=".5" value="0" data-show-value="true" id="changeHrs" data-thumbwidth="20">
-                  <p class="slider_label" id="hrsChosen"></p>
-                </div>
+        <div class="container p-2 border border-dark">
+          <h3  class="mb-3 p-2 text-dark border border-dark rounded">These 3 clocks were created via class instances</h3>
+          <h4>Drag the slider to shift the time in the 3 clocks below</h4>
+          <p>If you want to see what time it <em>will</em> be in another city at a future time in your city, drag the slider</p>
+          <!-- container to hold range sliders -->
+          <div class="container">
+            <div class="row">
+              <div class="col-6">
+                <form>
+                  <div class="form-group">
+                    <div class="">
+                      <label for="changeHrs">Shift Time (hrs)</label>
+                      <input type="range" class="slider form-control-input" min="0" max="23.5" step=".5" value="0" data-show-value="true" id="changeHrs" data-thumbwidth="20">
+                      <p class="slider_label" id="hrsChosen"></p>
+                    </div>
+                  </div>
+                </form>
               </div>
-            </form>
-          </div>
-        </div>
-      </div> <!-- close container for range sliders -->
+            </div>
+          </div> <!-- close container for range sliders -->
 
-         <!-- One placeholder for all clocks using clockCards template -->
-      <div class="container mb-3">
-        <div class="row" id="shiftingClocksPlaceholder"></div>
-      </div>
-      <div class="container">
-        <div class="row" id="staticClocksPlaceholder"></div>
-      </div>
-      <!-- end clocks -->
+        <!-- One placeholder for all clocks using clockCards template -->
+          <div class="container mb-3">
+            <div class="row" id="shiftingClocksPlaceholder"></div>
+          </div>
+          <div class="container">
+            <div class="row" id="staticClocksPlaceholder"></div>
+          </div>
+        <!-- end clocks -->
+      </div><!-- end box around classes with timeshifter -->
       
       <!-- container to hold switches and selectable clock (so I can border it) -->
-      <div class="container p-2 border border-dark">
+      <div class="container mt-3 p-2 border border-dark">
+        <h3 class="mb-3 p-2 text-dark border border-dark rounded">This clock is not a class instance</h3>
         <!-- container to hold switches -->
         <div class="container"> 
           <!-- Switch to show/hide seconds -->
