More visual cleanup

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <main>
       <!-- html goes here -->
 
-        <div class="container p-2 border border-dark">
+        <div class="container p-2 border border-dark bg-light">
           <h3  class="mb-3 p-2 text-dark border border-dark rounded">These 3 clocks were created via class instances</h3>
           <h4>Drag the slider to shift the time in the 3 clocks below</h4>
           <p>If you want to see what time it <em>will</em> be in another city at a future time in your city, drag the slider</p>
