Input select for city actually changes the clock!
It's a miracle.

--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
               <div class="card-body"> <!-- card body -->
                 <div class="mb-3" id="{{dropDownDivID}}"></div> <!-- placeholder for dropdown select -->
 
-                <div id="parent" class="form-group "> <!-- form -->
-                  <label for="myAutocomplete">Search for City</label>
+                <div id="parent" class="form-group"> <!-- form -->
+                  <label for="myAutocomplete" class="sr-only" >Search for City</label>
                   <div id="{{searchBoxDivID}}"></div>
                   <!-- <input type="text" id="{{searchBoxDivID}}" class="form-control"></input> -->
                 </div> <!-- close form -->
