--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
             <p>Shift your current time and find out what time that will be in another timezone</p>
           </div>
         </div> -->
-        <!-- end row for time shifting explanation
+        <!-- end row for time shifting explanation -->
 
         <!-- container to hold range sliders -->
         <div class="container mt-2">
-          <div class="row m-1">
-            <div class="col-6">
+          <div class="row">
+            <div class="col">
               <form>
                 <div class="form-group">
-                  <div class="h4">
+                  <div >
                     <label for="changeHrs">Drag to Shift Time (hrs)</label>
                     <input type="range" class="slider form-control-input" min="0" max="23.5" step=".5" value="0" data-show-value="true" id="changeHrs" data-thumbwidth="20">
                     <p class="slider_label" id="hrsChosen"></p>
@@ -166,7 +166,7 @@
         </div> <!-- close container for range sliders -->
 
         <!-- One placeholder for all clocks using clockCards template -->
-        <div class="container mb-3">
+        <div class="container">
           <div class="row" id="shiftingClocksPlaceholder"></div>
         </div>
         <!-- end clock divs -->
@@ -182,7 +182,8 @@
           <div class= "col col-md-6 mb-2"> <!-- open column for clock -->
             <div class="card bg-primary text-white" style="width: 100%"> <!-- card -->
               <div class="card-body"> <!-- card body -->
-                <div class="mb-3" id="{{dropDownDivID}}"></div> <!-- placeholder for dropdown select -->
+                <!-- placeholder for dropdown select -->
+                <!-- <div class="mb-3" id="{{dropDownDivID}}"></div>  -->
 
                 <div id="parent" class="form-group"> <!-- form -->
                   <label for="myAutocomplete" class="sr-only" >Search for City</label>
@@ -190,11 +191,9 @@
                   <!-- <input type="text" id="{{searchBoxDivID}}" class="form-control"></input> -->
                 </div> <!-- close form -->
                 
-                <div id="output"></div> <!-- placeholder for output from onSelectItem callback -->
-
-                <h5 class="card-title bg-light rounded text-primary col p-2">{{timeDescription}}
-                  <div class="h5 ml-5" id="{{timeID}}"></div><!-- placeholder div for clock -->
-                </h5>
+                <div class="card-title bg-light rounded text-primary col p-2">{{timeDescription}}
+                  <div class="ml-5" id="{{timeID}}"></div><!-- placeholder div for clock -->
+                </div>
               </div> <!-- close card body -->
             </div> <!-- close div for card -->
           </div><!-- close column for clock -->
