named showSliderLabel so I can reset it
function for slider label was already there but I renamed it so that I can call it when the slider gets reset so both show 0.

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       
       <!-- open container for class clock template -->
       <div class="container">
-        <div class="row"> <!-- open row for each clock -->
+        <!-- <div class="row"> open row for each clock -->
           <div class= "col col-md-6 mb-2"> <!-- open column for clock -->
             <div class="card bg-primary text-white" style="width: 100%"> <!-- card -->
               <div class="card-body"> <!-- card body -->
@@ -197,7 +197,7 @@
               </div> <!-- close card body -->
             </div> <!-- close div for card -->
           </div><!-- close column for clock -->
-        </div> <!-- close row for each clock -->
+        <!-- </div> close row for each clock -->
       </div> <!-- close container for class clocks -->
       
     </script>
