Clean up title area for mobile

--- a/index.html
+++ b/index.html
@@ -97,23 +97,20 @@
     <!-- The page heading -->
     <header>
       <div class="container-fluid bg bg-light mb-2 rounded">
-        <div class="col-8">
-          <div class="row">
-            <div class="col-10">
-              <!-- Hide heading on small screens -->
-              <h1 class="h3 d-md-inline d-none">Timeshifter World Clock</h1>
-            </div>
-          </div>
-          <div class="row">
-            <p class="lead">
-              <div class="col-2"><img width="75" alt="Programming by Stealth Logo" src="https://pbs.bartificer.net/assets/logo.png"></div>
-              <div class="col-md-5 d-xs-none">
-                <!-- <p>Inspired by Programming By Stealth #92 Challenge</p>
-                <p><a href="https://pbs.bartificer.net/pbs92.html" target="_blank" rel="noopener">pbs.bartificer.net/...</a></p> -->
-                <p>Shift your current time and find out what time that will be in another timezone</p>
-              </div>
+        <div class="row">
+          <p class="lead">
+            <div class="col-2 mr-2"><img width="75" alt="Programming by Stealth Logo" src="https://pbs.bartificer.net/assets/logo.png"></div>
+            <h1 class="col h3 d-md-inline ">Timeshifter World Clock</h1>
+          </p>
+        </div>
+        <div class="row">
+          <div class="col-2 mr-2"></div>
+          <div class="col">
+            <p>Find out what time it WILL be in another timezone</p>
           </div>
         </div>
+        
+          <!-- </div> -->
       </div> <!-- close container for page header -->
     </header>
 
