--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div> <!-- close container for range sliders -->
 
         <!-- container to hold switches -->
-      <div class="container"> 
+      <!-- <div class="container">  -->
         <!-- Switch to show/hide seconds -->
         <!-- row for showSeconds switch -->
         <!-- <div class="row pl-3 pb-3">
@@ -168,7 +168,7 @@
                 <label class="custom-control-label mySwitches" for="showSeconds">Show Seconds</label>
               </div>
           </div> -->
-        </div>
+        <!-- </div> -->
         <!-- end switch to show/hide seconds -->
 
         <!-- Switch to  12 vs 24 hr clock -->
