Changed title to Time Shifter Clock

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       
     </style>
   
-    <title>NosillaCast TimeShifter Clock</title>
+    <title>Podfeet Time Shifter Clock</title>
   </head>
 
   <body>
@@ -103,7 +103,7 @@
         <div class="row">
           <p class="lead">
             <div class="col-2 mr-2"><img width="75" alt="Programming by Stealth Logo" src="https://pbs.bartificer.net/assets/logo.png"></div>
-            <h1 class="col h3 d-md-inline ">Timeshifter World Clock</h1>
+            <h1 class="col h3 d-md-inline ">Time Shifter Clock</h1>
           </p>
         </div>
         <div class="row">
