Added link to github

--- a/index.html
+++ b/index.html
@@ -200,11 +200,13 @@
         <!-- end clock divs -->
       </div><!-- end container for timeshifter clocks -->
 
-      <!-- a div to test something -->
-      <div class="container">
-        <div class="small" name="homage">This Time Shifting clock was inspired by Terry Brett's <a href="http://timescroller.com">TimeScroller</a> widget for OSX</div>
+      <!-- Credits -->
+      <div class="container mb-2">
+        <div class="small" name="homage">Time Shifter Clock was inspired by Terry Brett's <a href="http://timescroller.com">TimeScroller</a> iOS app and widget for OSX</div>
       </div>
-
+      <div class="container">
+        <div class="small" name="homage">Released as an open source project at <a href="https://github.com/NosillaCast/a-world-clock">github.com/NosillaCast/a-world-clock</a></div>
+      </div>
     </main>
     
     <!-- The clock card template for CLASS clocks -->
